# neural_network

./: Makefile  main.py  pyproject.toml  setup.cfg  utils.py
config/: log_config.py
methods/: backpropagation.py  feedforward.py  generate_learning_curve.py  gradient_descendent.py  gradient_descent.py  numerical_gradient.py  train_and_validate_model.py
