[tool.poetry]
name = "neural network"
version = "0.1.0"
description = ""
authors = ["Breno Bertone <bertonebreno@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.3"
matplotlib = "^3.6.1"
pandas = "^1.5.0"

[tool.poetry.group.dev.dependencies]
mypy = "^0.971"
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
